improved kill handling, fix job_control

--- a/README.html
+++ b/README.html
@@ -102,12 +102,12 @@
 <li>no need to install or learn a new programming language, library or framework</li>
 <li>no database, not event driven, not OO …</li>
 </ul>
-<h4 id="can-i-have-the-single-bashbot.sh-file-back">Can I have the single bashbot.sh file back?</h4>
+<h3 id="can-i-have-the-single-bashbot.sh-file-back">Can I have the single bashbot.sh file back?</h3>
 <p>At the beginning bashbot was simply the file <code>bashbot.sh</code> you can copy everywhere and run the bot. Now we have ‘commands.sh’, ‘mycommands.sh’, ’modules/*.sh’ and much more.</p>
 <p>Hey no Problem, if you are finished with your cool bot run <code>dev/make-standalone.sh</code> to create a stripped down Version of your bot containing only ‘bashbot.sh’ and ‘commands.sh’! For more information see <a href="doc/7_develop.md">Create a stripped down Version of your Bot</a></p>
 <p><span class="citation">@Gnadelwartz</span></p>
 <h2 id="thats-it">That’s it!</h2>
 <p>If you feel that there’s something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4 id="version-v0.80-pre-8-gf1ebdbb"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.80-pre-8-gf1ebdbb</h4>
+<h4 id="version-v0.80-pre-11-g8669cfb"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.80-pre-11-g8669cfb</h4>
 </body>
 </html>
