--- a/README.html
+++ b/README.html
@@ -108,6 +108,6 @@
 <p><span class="citation">@Gnadelwartz</span></p>
 <h2 id="thats-it">That’s it!</h2>
 <p>If you feel that there’s something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4 id="version-v80-rc1-0-gb096ea3"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v80-rc1-0-gb096ea3</h4>
+<h4 id="version-v0.80-0-g5bce3f7"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.80-0-g5bce3f7</h4>
 </body>
 </html>
