Add BASHBOT_HOME, commandline examples

--- a/README.html
+++ b/README.html
@@ -76,7 +76,11 @@
 <li>Prepare a new version</li>
 <li>Bashbot testsuite</li>
 </ul></li>
-<li><a href="doc/8_custom.md">Customize bashbot environment</a></li>
+<li><a href="doc/8_custom.md">Expert Use</a>
+<ul>
+<li>Use from CLI and Scripts</li>
+<li>Customize Bashbot Environment</li>
+</ul></li>
 <li><a href="examples/README.md">Examples</a></li>
 </ul>
 <h2 id="security-considerations">Security Considerations</h2>
@@ -108,6 +112,6 @@
 <p><span class="citation">@Gnadelwartz</span></p>
 <h2 id="thats-it">That’s it!</h2>
 <p>If you feel that there’s something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4 id="version-v0.90-dev-0-g75691dc"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.90-dev-0-g75691dc</h4>
+<h4 id="version-v0.90-dev-2-g51aa2ed"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.90-dev-2-g51aa2ed</h4>
 </body>
 </html>
