add file description to doc

--- a/README.html
+++ b/README.html
@@ -180,6 +180,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p><span class="citation">@Gnadelwartz</span></p>
 <h2 id="thats-it">That’s it!</h2>
 <p>If you feel that there’s something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4 id="version-v0.90-dev-18-g0f6864f"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.90-dev-18-g0f6864f</h4>
+<h4 id="version-v0.80-18-g6b88656"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.80-18-g6b88656</h4>
 </body>
 </html>
