--- a/README.html
+++ b/README.html
@@ -92,6 +92,8 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li>Handling UTF-8 character sets</li>
 <li>Run as other user or system service</li>
 <li>Scedule bashbot from Cron</li>
+<li>Use from CLI and Scripts</li>
+<li>Customize Bashbot Environment</li>
 </ul></li>
 <li><a href="doc/5_practice.md">Best Practices</a>
 <ul>
@@ -108,17 +110,12 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul></li>
 <li><a href="doc/7_develop.md">Deveoper Notess</a>
 <ul>
+<li>Debug bashbot</li>
+<li>Modules, addons, events</li>
 <li>Setup your environment</li>
-<li>Test, Add, Push changes</li>
-<li>Prepare a new version</li>
 <li>Bashbot testsuite</li>
 </ul></li>
-<li><a href="doc/8_custom.md">Expert Use</a>
-<ul>
-<li>Use from CLI and Scripts</li>
-<li>Customize Bashbot Environment</li>
-</ul></li>
-<li><a href="examples/README.md">Examples</a></li>
+<li><a href="examples/README.md">Examples Dir</a></li>
 </ul>
 <h3 id="your-really-first-bashbot-in-a-nutshell">Your really first bashbot in a nutshell</h3>
 <p>To install and run bashbot you need acess to a linux/unix/bsd command line. If you don’t know how to get accces to a linux/unix/bsd like command line you should stop reading here :-(</p>
@@ -193,6 +190,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p><span class="citation">@Gnadelwartz</span></p>
 <h2 id="thats-it">That’s it!</h2>
 <p>If you feel that there’s something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4 id="version-v0.90-dev2-0-gec85636"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.90-dev2-0-gec85636</h4>
+<h4 id="version-v0.90-dev2-19-g5779acc"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.90-dev2-19-g5779acc</h4>
 </body>
 </html>
