fix uppercase DIST and STANDALONE dirs

--- a/README.html
+++ b/README.html
@@ -108,7 +108,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li>Inline Queries</li>
 <li>Background and Interactive Jobs</li>
 </ul></li>
-<li><a href="doc/7_develop.md">Deveoper Notess</a>
+<li><a href="doc/7_develop.md">Deveoper Notes</a>
 <ul>
 <li>Debug bashbot</li>
 <li>Modules, addons, events</li>
