some doc updates plus working version of antiFlood.sh

--- a/README.html
+++ b/README.html
@@ -60,11 +60,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <p>Bashbot <a href="https://github.com/topkecleon/telegram-bot-bash">Documentation</a> and <a href="https://github.com/topkecleon/telegram-bot-bash/releases">Downloads</a> are availible on www.github.com</p>
 <h2 id="documentation">Documentation</h2>
 <ul>
-<li><a href="https://core.telegram.org/bots">Introdution to Telegram Bots</a>
-<ul>
-<li><a href="https://core.telegram.org/bots#3-how-do-i-create-a-bot">One Bot to rule them all</a></li>
-<li><a href="https://core.telegram.org/bots#commands">Bot commands</a></li>
-</ul></li>
+<li><a href="https://core.telegram.org/bots">Introdution to Telegram Bots</a></li>
 <li><a href="doc/0_install.md">Install Bashbot</a>
 <ul>
 <li>Install release</li>
@@ -72,7 +68,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li>Update Bashbot</li>
 <li>Notes on Updates</li>
 </ul></li>
-<li><a href="doc/1_firstbot.md">Create a new Telegram Bot with botfather</a></li>
+<li><a href="doc/1_firstbot.md">Get Bottoken from Botfather</a></li>
 <li><a href="doc/2_usage.md">Getting Started</a>
 <ul>
 <li>Managing your Bot</li>
@@ -190,6 +186,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p><span class="citation">@Gnadelwartz</span></p>
 <h2 id="thats-it">That’s it!</h2>
 <p>If you feel that there’s something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4 id="version-v0.90-dev2-19-g5779acc"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.90-dev2-19-g5779acc</h4>
+<h4 id="version-v0.90-dev2-23-g2a28e7f"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.90-dev2-23-g2a28e7f</h4>
 </body>
 </html>
