some minor adjustments in bashbot.sh

--- a/README.html
+++ b/README.html
@@ -93,7 +93,8 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul></li>
 <li><a href="doc/5_practice.md">Best Practices</a>
 <ul>
-<li>Customize commands.sh</li>
+<li>Customize mycommands.sh</li>
+<li>Overwrite/disable commands</li>
 <li>Seperate logic from commands</li>
 <li>Test your Bot with shellcheck</li>
 </ul></li>
@@ -186,6 +187,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p><span class="citation">@Gnadelwartz</span></p>
 <h2 id="thats-it">That’s it!</h2>
 <p>If you feel that there’s something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4 id="version-v0.90-0-g7029f7f"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.90-0-g7029f7f</h4>
+<h4 id="version-v0.90-1-g5ebfacc"><br /><span class="math display"><em>V</em><em>E</em><em>R</em><em>S</em><em>I</em><em>O</em><em>N</em></span><br /> v0.90-1-g5ebfacc</h4>
 </body>
 </html>
