--- a/README.html
+++ b/README.html
@@ -223,6 +223,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v0.94-dev2-0-g3d636f7</h4>
+<h4>$$VERSION$$ v0.94-dev3-0-geef955a</h4>
 </body>
 </html>
