allow += for jsshDB, this allows adding to keys without overwrite

--- a/README.html
+++ b/README.html
@@ -224,6 +224,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v0.94-4-gcbce60a</h4>
+<h4>$$VERSION$$ v0.94-5-g6531fec</h4>
 </body>
 </html>
