--- a/README.html
+++ b/README.html
@@ -228,6 +228,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ V0.94-1-g7aa409f</h4>
+<h4>$$VERSION$$ V0.94-2-gced78d3</h4>
 </body>
 </html>
