--- a/README.html
+++ b/README.html
@@ -228,6 +228,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v0.96-dev-6-g7e83e5d</h4>
+<h4>$$VERSION$$ v0.96-dev-7-g0153928</h4>
 </body>
 </html>
