--- a/README.html
+++ b/README.html
@@ -139,6 +139,7 @@ Written by Drew (@topkecleon), Daniil Gentili (@danogentili), and Kay M (@gnadel
 <li>Sending Messages, Files, Keyboards</li>
 <li>User Access Control</li>
 <li>Inline Queries</li>
+<li>jsshDB Bashbot key-value storage</li>
 <li>Background and Interactive Jobs</li>
 </ul></li>
 <li><a href="doc/7_develop.md">Deveoper Notes</a>
@@ -230,6 +231,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ 0.96-dev2-0-gcbad540</h4>
+<h4>$$VERSION$$ v0.96-dev3-0-gdddd1ce</h4>
 </body>
 </html>
