--- a/README.html
+++ b/README.html
@@ -118,6 +118,7 @@ Written by Drew (@topkecleon), Daniil Gentili (@danogentili), and Kay M (@gnadel
 <li>Interactive Chats</li>
 <li>Background Jobs</li>
 <li>Inline queries</li>
+<li>Send message errors</li>
 </ul></li>
 <li><a href="doc/4_expert.md">Expert Use</a>
 <ul>
@@ -245,6 +246,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v0.96-pre-13-ga71d68e</h4>
+<h4>$$VERSION$$ v0.96-pre-39-gb6e9f9e</h4>
 </body>
 </html>
