--- a/README.html
+++ b/README.html
@@ -246,6 +246,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v0.96-pre-39-gb6e9f9e</h4>
+<h4>$$VERSION$$ v0.96-0-g3871ca9</h4>
 </body>
 </html>
