--- a/README.html
+++ b/README.html
@@ -176,14 +176,14 @@ It features background tasks and interactive chats, and can serve as an interfac
 </code></pre>
 <p>For more Information on how to install, customize and use your new bot, read the <a href="#Documentation">Documentation</a></p>
 <h3>Log files</h3>
-<p>Since version 0.96 bashbot log commands recieved (updates) and connection errors. If you start bashbot in debug mode bash stdout, stderr and all recieved telegram message updates are logged also.</p>
+<p>Since version 0.96 bashbot log commands recieved/send and connection errors. If you start bashbot in debug mode bash stdout, stderr and all send/received telegram message are logged also.</p>
 <p>To enable debug mode start bashbot with debug as third argument: <code>bashbot start debug</code></p>
 <pre><code>├── logs 
+│   ├── BASHBOT.log      # log what your bot is doing ...
 │   ├── ERROR.log        # connection errors from / to telegram API
-│   ├── UPDATE.log       # summary whats received from your bot
 │   │
 │   ├── DEBUG.log        # stdout/stderr of you bot (debug mode enabled)
-│   └── MESSAGE.log      # full text of all message updates received (debug mode enabled)
+│   └── MESSAGE.log      # full text of all message send/received (debug mode enabled)
 </code></pre>
 <hr />
 <h2>Security Considerations</h2>
@@ -257,6 +257,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v0.98-dev-42-geea1de6</h4>
+<h4>$$VERSION$$ v0.98-dev-47-gba614b7</h4>
 </body>
 </html>
