--- a/README.html
+++ b/README.html
@@ -90,7 +90,7 @@ Written by Drew (@topkecleon), Daniil Gentili (@danogentili), and Kay M (@gnadel
 <p>Contributions by JuanPotato, BigNerd95, TiagoDanin, and iicc1.</p>
 <p>Released to the public domain wherever applicable. Elsewhere, consider it released under the <a href="http://www.wtfpl.net/txt/copying/">WTFPLv2</a>.</p>
 <h2>Prerequisites</h2>
-<p>Uses <a href="http://github.com/dominictarr/JSON.sh">JSON.sh</a>, but no more TMUX.</p>
+<p>Uses <a href="http://github.com/dominictarr/JSON.sh">JSON.sh</a> and the magic of (gnu) sed.</p>
 <p>Even bashbot is written in bash, it depends on commands typically available in a Unix/Linux Environment. More concret on the common commands provided by recent versions of <a href="https://en.wikipedia.org/wiki/List_of_GNU_Core_Utilities_commands">coreutils</a>, <a href="https://en.wikipedia.org/wiki/BusyBox#Commands">busybox</a> or <a href="https://landley.net/toybox/help.html">toybox</a>, see <a href="doc/7_develop.md#common-commands">Developer Notes</a></p>
 <p><em>Note for MacOS and BSD Users:</em> As bashbot heavily uses modern bash and (gnu) grep/sed features, bashbot will not run without installing additional software, see <a href="doc/0_install.md">Install Bashbot</a></p>
 <p>Bashbot <a href="https://github.com/topkecleon/telegram-bot-bash">Documentation</a> and <a href="https://github.com/topkecleon/telegram-bot-bash/releases">Downloads</a> are available on www.github.com</p>
@@ -225,7 +225,7 @@ It features background tasks and interactive chats, and can serve as an interfac
 <h3>Why Bash and not the much better xyz?</h3>
 <p>Well, that's a damn good question ... may be because I'm an Unix/Linux admin from stone age. Nevertheless there are more reasons from my side:</p>
 <ul>
-<li>bashbot will run everywhere where bash is available, from embedded linux to mainframe</li>
+<li>bashbot will run everywhere where bash and (gnu) sed is available, from embedded linux to mainframe</li>
 <li>easy to integrate with other shell script, e.g. for sending system message / health status</li>
 <li>no need to install or learn a new programming language, library or framework</li>
 <li>no database, not event driven, not OO ...</li>
@@ -257,6 +257,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v0.98-dev-70-g694ee61</h4>
+<h4>$$VERSION$$ v0.98-pre-3-g0f24eb8</h4>
 </body>
 </html>
