--- a/README.html
+++ b/README.html
@@ -257,6 +257,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v0.98-pre2-0-ga597303</h4>
+<h4>$$VERSION$$ v0.98-0-g5b5447e</h4>
 </body>
 </html>
