--- a/README.html
+++ b/README.html
@@ -153,7 +153,7 @@ Written by Drew (@topkecleon) and Kay M (@gnadelwartz).
 <li><a href="examples/README.md">Examples Dir</a></li>
 </ul>
 <h3>Your really first bashbot in a nutshell</h3>
-<p>To install and run bashbot you need access to a linux/unix command line. If you don't know how to get access to a linux/unixe command line you should stop reading here :-(</p>
+<p>To install and run bashbot you need access to a linux/unix command line. If you don't know how to get access to a linux/unix command line you should stop reading here :-(</p>
 <p>In addition you need a <a href="https://telegram.org">Telegram client</a> and a mobile phone to <a href="https://telegramguide.com/create-a-telegram-account/">register an account</a>. If you don't want to register for Telegram you should stop reading here ;-)</p>
 <p>After you're registered to Telegram send a message to <a href="https://telegram.me/botfather">@botfather</a>, <a href="doc/1_firstbot.md">create a new Telegram Bot token</a> and write it down. You need the token to install the bot.</p>
 <p>Now open a terminal and check if bash is installed: <code>which bash &amp;&amp; echo "bash installed!"</code>. If you get an error message bash is not installed.</p>
@@ -268,6 +268,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v0.99-dev2-14-g6e02423</h4>
+<h4>$$VERSION$$ v0.99-dev2-15-gf3bb5d9</h4>
 </body>
 </html>
