--- a/README.html
+++ b/README.html
@@ -269,6 +269,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v1.0-0-g99217c4</h4>
+<h4>$$VERSION$$ v1.0-18-g9b3d689</h4>
 </body>
 </html>
