--- a/README.html
+++ b/README.html
@@ -272,6 +272,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v1.0-22-g1153d65</h4>
+<h4>$$VERSION$$ v1.1-0-gc0eb399</h4>
 </body>
 </html>
