--- a/README.html
+++ b/README.html
@@ -273,6 +273,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it all guys!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v1.2-pre2-0-g2824487</h4>
+<h4>$$VERSION$$ v1.2-pre2-2-gef80aa5</h4>
 </body>
 </html>
