--- a/README.html
+++ b/README.html
@@ -404,6 +404,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it all guys!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v1.2-dev2-15-g3496a21</h4>
+<h4>$$VERSION$$ v1.20-0-g2ab00a2</h4>
 </body>
 </html>
