dev: preservere links for README.txt

--- a/README.html
+++ b/README.html
@@ -390,6 +390,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it all guys!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v1.25-dev-33-g04e3c18</h4>
+<h4>$$VERSION$$ v1.25-dev-37-gf0a2843</h4>
 </body>
 </html>
