doc: xlink webhook example

--- a/README.html
+++ b/README.html
@@ -284,7 +284,8 @@ Written by Drew (@topkecleon) and Kay M (@gnadelwartz).
 <li>Setup your environment</li>
 <li>Bashbot test suite</li>
 </ul></li>
-<li><a href="examples/README.md">Examples Directory</a></li>
+<li><a href="examples">Examples Directory</a></li>
+<li><a href="examples/webhook">Webhook Example</a></li>
 </ul>
 <h3>Your very first bashbot in a nutshell</h3>
 <p>To install and run bashbot you need access to a Linux/Unix command line with bash, a <a href="https://telegram.org">Telegram client</a> and a mobile phone <a href="https://telegramguide.com/create-a-telegram-account/">with a Telegram account</a>.</p>
