--- a/README.html
+++ b/README.html
@@ -391,6 +391,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it all guys!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v1.32-dev-9-g13052f0</h4>
+<h4>$$VERSION$$ v1.40-dev-29-g737be16</h4>
 </body>
 </html>
