--- a/README.html
+++ b/README.html
@@ -263,6 +263,6 @@ It features background tasks and interactive chats, and can serve as an interfac
 <p>@Gnadelwartz</p>
 <h2>That's it all guys!</h2>
 <p>If you feel that there's something missing or if you found a bug, feel free to submit a pull request!</p>
-<h4>$$VERSION$$ v1.51-0-g6e66a28</h4>
+<h4>$$VERSION$$ v1.52-0-g1a83202</h4>
 </body>
 </html>
